force-app/main/default/objects/My_school__c.object
<CustomObject>
    <fields>
        <fullName>About_us__c</fullName>
        <label>About us</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Establishment__c</fullName>
        <inlineHelpText>Date of Establishment of the school .</inlineHelpText>
        <label>Date of Establishment</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Classes__c</fullName>
        <label>No. of Classes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Students__c</fullName>
        <label>No. of Students</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Teachers__c</fullName>
        <label>No. of Teachers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Years_In_Existence__c</fullName>
        <formula>YEAR( TODAY()) -   YEAR(Date_of_Establishment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years In Existence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>My school</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Class_Approver_My_school</fullName>
        <filterScope>Queue</filterScope>
        <label>Class Approver</label>
        <queue>Class_Approver</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>My school  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My schools</pluralLabel>
    <recordTypes>
        <fullName>RT_1</fullName>
        <active>true</active>
        <label>RT-1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Validate_Date_Of_Establishment</fullName>
        <active>true</active>
        <errorConditionFormula>YEAR( TODAY() )   &lt;  YEAR( Date_of_Establishment__c )</errorConditionFormula>
        <errorDisplayField>Date_of_Establishment__c</errorDisplayField>
        <errorMessage>Please Enter Correct Date</errorMessage>
    </validationRules>
</CustomObject>